Corrected the alignments.
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@32144 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/core/Core/View/Style/base.css
+++ b/core/Core/View/Style/base.css
@@ -1555,3 +1555,12 @@ a.cke_dialog_ui_button_ok:hover {
 .language-icons .language-icon.inexistent {
     background-color: #AAAAAA;
 }
+#configSettingsTabs input[type="text"] {
+    width:558px;
+}
+#configSettingsTabs select {
+    width:566px;
+}
+#configSettingsTabs tr td input[type="radio"]:first-child{
+    margin:3px 3px 3px -1px;
+}
